--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -1,11 +1,6 @@
 <div class="row">
 	<aside class="span4">
-		<section>
-			<%= render 'shared/user_info' %>
-		</section>
-		<section>
-			<%= render 'shared/stats' %>
-		</section>
+		<%= render 'shared/user_info_stats' %>
 		<section>
 			<%= render 'shared/micropost_form' %>
 		</section>
